# CASE-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
cli/: cli.py  cli_interface.py  cli_settings.py  cli_styling.py
core/: config.py  engine.py  exception.py  settings.py  settings.toml
core/Provider/: provider.py  providers.json
